Ajustes no codigo

--- a/projeto_web/nbproject/project.properties
+++ b/projeto_web/nbproject/project.properties
@@ -259,7 +259,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=ps2.app.FaculdadeApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
